# PMI_F_2_PROJECT_AISD

./: .gitignore  CMakeLists.txt  README.md  country_infection_rate.txt  main.cpp  output.txt  statistics_collection.py
Нахождения макс и мин города по числу заражений/: max_min_rate_country.cpp
Нахождения пути с наименьшим процентом заражения/: probability_infection.cpp
Парсер сайта с короновирусом/: statistics_collection.py
Результирующие файлы/: country_infection_rate.txt  input.txt
Статистика Приморского края/: hash_for_task.cpp
