cmake_minimum_required(VERSION 3.16)
project(PMI_F_2_PROJECT_AISD)

set(CMAKE_CXX_STANDARD 20)

add_executable(probability_infection "Нахождения пути с наименьшим процентом заражения/probability_infection.cpp")
add_executable(max_min_rate_country "Нахождения макс и мин города по числу заражений/max_min_rate_country.cpp")
add_executable(hash_for_task "Статистика Приморского края/hash_for_task.cpp")